@@ -3,16 +3,11 @@ use warnings;
 
 use Module::Build 0.4004;
 
-sub testing { $ENV{AUTOMATED_TESTING} || $ENV{PERL_CPAN_REPORTER_CONFIG}
-                                      || $ENV{PERL5_CPANPLUS_IS_VERSION} }
-sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
-
 my $perl_ver = 5.01;
 my $name     = 'HTML-FormWidgets'; $name =~ s{ - }{::}gmx;
 my $prereqs  = {
   'build_requires' => {
     'Module::Build' => '0.4004',
-    'Test::Requires' => '0.06',
     'version' => '0.88'
   },
   'configure_requires' => {
@@ -22,26 +17,40 @@ my $prereqs  = {
   'requires' => {
     'Class::Accessor' => '0.34',
     'Class::Load' => '0.22',
-    'HTML::Accessors' => 'v0.12.0',
-    'PPI' => '1.218',
+    'HTML::Accessors' => 'v0.13.0',
+    'PPI' => '1.220',
     'PPI::HTML' => '1.08',
     'Pod::Xhtml' => '1.61',
     'Try::Tiny' => '0.22',
-    'parent' => '0.228',
+    'parent' => '0.234',
     'perl' => '5.01'
   },
+  'test_requires' => {
+    'File::Spec' => '0',
+    'Module::Build' => '0.4004',
+    'Module::Metadata' => '0',
+    'Sys::Hostname' => '0',
+    'Test::Requires' => '0.06',
+    'version' => '0.88'
+  },
 };
-
-if ($] < $perl_ver) { # Not interested in reports below min perl ver
-   testing or whimper "Minimum required Perl version is ${perl_ver}";
+my $testing  = sub { $ENV{AUTOMATED_TESTING}
+                  || $ENV{PERL_CPAN_REPORTER_CONFIG}
+                  || $ENV{PERL5_CPANPLUS_IS_VERSION} };
+my $whimper  = sub { print {*STDOUT} $_[ 0 ]."\n"; exit 0 };
+my $stop     = sub {
+   $testing->() or $whimper->( $_[ 0 ] );
    $prereqs->{build_requires} = { %{ $prereqs->{configure_requires} } };
    $prereqs->{build_requires}->{ 'Test::Requires' } = 0.06;
    delete $prereqs->{requires};
-}
+};
+
+# Not interested in reports below min perl ver
+$] < $perl_ver and $stop->( "Minimum required Perl version is ${perl_ver}" );
 
 Module::Build->new(
    'module_name' => $name,
-   'notes'       => { min_perl_version => $perl_ver, testing => testing },
+   'notes'       => { min_perl_version => $perl_ver, testing => $testing->() },
    %{ $prereqs },
 
 )->create_build_script;
