@@ -2,12 +2,12 @@ name = HTML-FormWidgets
 
 [Prereqs]
 perl              = 5.01
-parent            = 0.228
+parent            = 0.234
 Class::Accessor   = 0.34
 Class::Load       = 0.22
-HTML::Accessors   = v0.12.0
+HTML::Accessors   = v0.13.0
 Pod::Xhtml        = 1.61
-PPI               = 1.218
+PPI               = 1.220
 PPI::HTML         = 1.08
 Try::Tiny         = 0.22
 
@@ -16,6 +16,10 @@ version           = 0.88
 Module::Build     = 0.4004
 
 [Prereqs / BuildRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / TestRequires]
 version           = 0.88
 Module::Build     = 0.4004
 Test::Requires    = 0.06
@@ -70,6 +74,7 @@ exclude_filename  = cpanfile
 [MetaYAML]
 [ManifestInRoot]
 [ManifestSkip]
+[Test::ReportMetadata]
 
 ; Local Variables:
 ; mode: conf-windows
